# tacuda

./: CMakeLists.txt  README.md
benchmarks/: bench_adx.py  bench_atr.py  bench_ema.py  bench_macd_line.py  bench_momentum.py  bench_obv.py  bench_rsi.py  bench_sma.py  bench_wma.py  utils.py
bindings/: generate_bindings.py
bindings/csharp/: CudaTaLib.cs  OhlcvSeries.cs  README.md  Tacuda.Generated.cs
bindings/csharp/ConsoleExample/: ConsoleExample.csproj  Program.cs
bindings/python/: README.md  __init__.py  _generated.py
cmake/: tacudaConfig.cmake
include/: cuda_talib.h  tacuda.h
include/indicators/: ACCBANDS.h  AD.h  ADOSC.h  ADX.h  ADXR.h  APO.h  ATR.h  AVGDEV.h  AbandonedBaby.h  AdvanceBlock.h  Aroon.h  AroonOscillator.h  AvgPrice.h  BBANDS.h  BOP.h  BearishEngulfing.h  BeltHold.h  Beta.h  Breakaway.h  BullishEngulfing.h  CCI.h  CDL3OUTSIDE.h  CMO.h  Change.h  ClosingMarubozu.h  ConcealBabySwallow.h  Correl.h  CounterAttack.h  DEMA.h  DX.h  DarkCloudCover.h  Doji.h  DojiStar.h  DragonflyDoji.h  EMA.h  Engulfing.h  EveningDojiStar.h  EveningStar.h  GapSideSideWhite.h  GravestoneDoji.h  (+109 more)
include/indicators/detail/: ema_common.cuh
include/tacuda/: OHLCVSeries.h
include/utils/: CandleUtils.h  CudaUtils.h  DeviceBufferPool.h
src/: main.cpp
src/api/: api.cpp
src/indicators/: ACCBANDS.cu  AD.cu  ADOSC.cu  ADX.cu  ADXR.cu  APO.cu  ATR.cu  AVGDEV.cu  AbandonedBaby.cu  AdvanceBlock.cu  Aroon.cu  AroonOscillator.cu  AvgPrice.cu  BBANDS.cu  BOP.cu  BearishEngulfing.cu  BeltHold.cu  Beta.cu  Breakaway.cu  BullishEngulfing.cu  CCI.cu  CDL3OUTSIDE.cu  CMO.cu  Change.cu  ClosingMarubozu.cu  ConcealBabySwallow.cu  Correl.cu  CounterAttack.cu  DEMA.cu  DX.cu  DarkCloudCover.cu  Doji.cu  DojiStar.cu  DragonflyDoji.cu  EMA.cu  Engulfing.cu  EveningDojiStar.cu  EveningStar.cu  GapSideSideWhite.cu  GravestoneDoji.cu  (+108 more)
src/indicators/detail/: ema_common.cu
src/utils/: DeviceBufferPool.cu
tests/cpp/: test_ad.cpp  test_adosc.cpp  test_adx.cpp  test_adxr.cpp  test_apo.cpp  test_aroon.cpp  test_aroonoscillator.cpp  test_atr.cpp  test_avgprice.cpp  test_basic.cpp  test_bbands.cpp  test_beta.cpp  test_bop.cpp  test_cci.cpp  test_cdl_abandoned_baby.cpp  test_cdl_advance_block.cpp  test_cdl_bearish_engulfing.cpp  test_cdl_belt_hold.cpp  test_cdl_breakaway.cpp  test_cdl_bullish_engulfing.cpp  test_cdl_closing_marubozu.cpp  test_cdl_conceal_baby_swallow.cpp  test_cdl_counterattack.cpp  test_cdl_dark_cloud_cover.cpp  test_cdl_doji.cpp  test_cdl_doji_star.cpp  test_cdl_dragonfly_doji.cpp  test_cdl_engulfing.cpp  test_cdl_evening_doji_star.cpp  test_cdl_evening_star.cpp  test_cdl_gap_side_side_white.cpp  test_cdl_gravestone_doji.cpp  test_cdl_hammer.cpp  test_cdl_hanging_man.cpp  test_cdl_harami.cpp  test_cdl_harami_cross.cpp  test_cdl_high_wave.cpp  test_cdl_hikkake.cpp  test_cdl_hikkake_mod.cpp  test_cdl_homing_pigeon.cpp  (+108 more)
